bug: Change row flex-wrap to `nowrap`.

--- a/src/stylesheets/FlexFramework.css
+++ b/src/stylesheets/FlexFramework.css
@@ -49,8 +49,8 @@ ul {
   -webkit-box-direction: normal;
   box-orient: horizontal;
   box-direction: normal;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   margin-left: 0;
   margin-right: 0;
 }
